update: fixed index, signup and login page forms going outside the screen on mobile screen size

--- a/src/scss/_Form.scss
+++ b/src/scss/_Form.scss
@@ -122,9 +122,3 @@ form .form-button-group{
         width: 2rem;
     }
 }
-
-@media screen and (max-width: 1000px){
-    form{
-        max-width: 0 !important;
-    }
-}
